# CCBI

./: .hgignore  CMakeLists.txt  build-ldc-release.sh  build-ldc-work.sh  ccbi.d  ccbi.rf  cell.d  changelog.txt  container.d  fingerprint.d  fungemachine.d  globals.d  instructions.d  ip.d  license.txt  random.d  runtests.sh  space.d  stdlib.d  templateutils.d  trace.d  tracer.d  utils.d
fingerprints/: all.d
fingerprints/cats_eye/: hrti.d  mode.d  modu.d  null_.d  orth.d  perl.d  refc.d  roma.d  toys.d  turt.d
fingerprints/glfunge98/: scke.d
fingerprints/jvh/: jstr.d  ncrs.d
fingerprints/rcfunge98/: _3dsp.d  base.d  cpli.d  date.d  dirf.d  evar.d  file.d  fixp.d  fpdp.d  fpsp.d  frth.d  iipc.d  imap.d  indv.d  sock.d  strn.d  subr.d  term.d  time.d  trds.d
instructions/: std.d  templates.d  utils.d
mini/: funge.d  instructions.d  vars.d
src/: wrapncrs.c  wraprexp.c
src/ccbi/: ccbi.d  cell.d  container.d  exceptions.d  fingerprint.d  flags.d  fungemachine.d  fungestate.d  globals.d  ip.d  random.d  request.d  space.d  stats.d  stdlib.d  templateutils.d  tracer.d  utils.d
src/ccbi/fingerprints/: all.d
src/ccbi/fingerprints/cats_eye/: hrti.d  mode.d  modu.d  null_.d  orth.d  perl.d  refc.d  roma.d  toys.d  turt.d
src/ccbi/fingerprints/glfunge98/: scke.d
src/ccbi/fingerprints/jvh/: jstr.d  ncrs.d
src/ccbi/fingerprints/rcfunge98/: _3dsp.d  arry.d  base.d  bool_.d  cpli.d  date.d  dirf.d  evar.d  file.d  fing.d  fixp.d  fpdp.d  fprt.d  fpsp.d  frth.d  ical.d  iipc.d  imap.d  imth.d  indv.d  long_.d  rand.d  rexp.d  sock.d  strn.d  subr.d  term.d  time.d  trds.d  trgr.d
src/ccbi/instructions/: std.d  templates.d  utils.d
src/ccbi/mini/: funge.d
src/ccbi/space/: aabb.d  coords.d  cursor.d  space.d  utils.d
tests/: runner.pl
tests/space/: baka-i.b98.t  bakawrap.b98.t  bakawrap.b98.t.in  disjoint.b98.t  disjoint.b98.t.in  disjoint.t98.t  edge-i.b98.t  edge-i.t98.t  edge-long.b98.t  edge.b98.t  fusion-complete.b98.t  fusion-overlapping.b98.t  fusion-overlapping.t98.t  fusion-simple.b98.t  fusion-simple.t98.t
tests/space/regress/: spaceout-overlaps.b98.t
tests/trds/: midthread.b98.t  simple.b98.t
